# va-ui/src/app/api/model/vaccination.ts
@@ -18,5 +18,8 @@ export interface Vaccination {
     firstDoses?: number;
     secondDoses?: number;
     received?: number;
+    phase1Date?: string;
+    phase2Date?: string;
+    phase3Date?: string;
 }
 
