# va-ui/src/app/api/model/vaccinationPartial.ts
@@ -21,5 +21,8 @@ export interface VaccinationPartial {
     firstDoses?: number;
     secondDoses?: number;
     received?: number;
+    phase1Date?: string;
+    phase2Date?: string;
+    phase3Date?: string;
 }
 
