# va-ui/src/app/api/model/vaccinationWithRelations.ts
@@ -21,5 +21,8 @@ export interface VaccinationWithRelations {
     firstDoses?: number;
     secondDoses?: number;
     received?: number;
+    phase1Date?: string;
+    phase2Date?: string;
+    phase3Date?: string;
 }
 
